--- a/stocks-cli.cabal
+++ b/stocks-cli.cabal
@@ -15,12 +15,12 @@ license-file:        LICENSE
 -- copyright:
 -- category:
 build-type:          Simple
-extra-source-files:  CHANGELOG.md
+extra-source-files:  CHANGELOG.md 
 
 executable stocks-cli
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       CLI
   -- other-extensions:
   build-depends:       base >=4.14 && <4.15
-  -- hs-source-dirs:
+  hs-source-dirs:      ., src
   default-language:    Haskell2010
