--- a/stocks-cli.cabal
+++ b/stocks-cli.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 594dfa3061ba2ea926a94364d1afe7157b7386021c2a7c1791ebbde895458276
+-- hash: 40e2c7d314c393aea3ee4ee29fe1496d567b736455e21d3922058b6e73883c3c
 
 name:           stocks-cli
 version:        0.1.0.0
@@ -30,6 +30,7 @@ library
       CLI
       CLICommands
       Prettify
+      TestStocks
       Types
   other-modules:
       Paths_stocks_cli
