--- a/stocks-cli.cabal
+++ b/stocks-cli.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 40e2c7d314c393aea3ee4ee29fe1496d567b736455e21d3922058b6e73883c3c
+-- hash: 6eb1811c5b0c19cfcad094a523f83e7da0a61bd3917bb922a491a3e31173f50b
 
 name:           stocks-cli
 version:        0.1.0.0
@@ -30,6 +30,7 @@ library
       CLI
       CLICommands
       Prettify
+      StocksCompactJSON
       TestStocks
       Types
   other-modules:
@@ -38,10 +39,15 @@ library
       src
   build-depends:
       QuickCheck
+    , aeson
     , base >=4.7 && <5
+    , bytestring
     , extra
     , ghc-lib-parser
     , hspec
+    , scientific
+    , text
+    , vector
   default-language: Haskell2010
 
 executable stocks-cli-exe
@@ -53,11 +59,16 @@ executable stocks-cli-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       QuickCheck
+    , aeson
     , base >=4.7 && <5
+    , bytestring
     , extra
     , ghc-lib-parser
     , hspec
+    , scientific
     , stocks-cli
+    , text
+    , vector
   default-language: Haskell2010
 
 test-suite stocks-cli-test
@@ -66,15 +77,21 @@ test-suite stocks-cli-test
   other-modules:
       CLISpec
       PrettifySpec
+      StocksCompactJSONSpec
       Paths_stocks_cli
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       QuickCheck
+    , aeson
     , base >=4.7 && <5
+    , bytestring
     , extra
     , ghc-lib-parser
     , hspec
+    , scientific
     , stocks-cli
+    , text
+    , vector
   default-language: Haskell2010
