--- a/stocks-cli.cabal
+++ b/stocks-cli.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 81322c545b4acddf94877332704928a331c634cafdd505c16124d31f04f86627
+-- hash: 5474e0b9297290fa9da10384c66baec33fdd920156f52aeaa8da5f0e8fced702
 
 name:           stocks-cli
 version:        0.1.0.0
@@ -51,6 +51,7 @@ library
     , ghc-lib-parser
     , hspec
     , lens
+    , lens-aeson
     , scientific
     , sort
     , text
@@ -74,6 +75,7 @@ executable stocks-cli-exe
     , ghc-lib-parser
     , hspec
     , lens
+    , lens-aeson
     , scientific
     , sort
     , stocks-cli
@@ -107,6 +109,7 @@ test-suite stocks-cli-test
     , ghc-lib-parser
     , hspec
     , lens
+    , lens-aeson
     , scientific
     , sort
     , stocks-cli
