--- a/stocks-cli.cabal
+++ b/stocks-cli.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: dfa85ee84364524256612774c068441da4aec1a3a83c5c7a0b02a888c97eaffb
+-- hash: ec405036196b273f414af2ec2dc2c77472666776bfe79e64dfc6290757a84969
 
 name:           stocks-cli
 version:        0.1.0.0
@@ -46,6 +46,7 @@ library
   build-depends:
       QuickCheck
     , aeson
+    , async
     , base >=4.7 && <5
     , bytestring
     , errors
@@ -72,6 +73,7 @@ executable stocks-cli-exe
   build-depends:
       QuickCheck
     , aeson
+    , async
     , base >=4.7 && <5
     , bytestring
     , errors
@@ -108,6 +110,7 @@ test-suite stocks-cli-test
   build-depends:
       QuickCheck
     , aeson
+    , async
     , base >=4.7 && <5
     , bytestring
     , errors
